# rust-rocket-crud-2

./: .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  api.http  docker-compose.yml
migrations/2023-12-22-132739_create_rustaceans/: up.sql
migrations/2023-12-22-132745_create_crates/: up.sql
migrations/2023-12-28-163401_create_users/: up.sql
migrations/2023-12-28-163406_create_roles/: up.sql
migrations/2023-12-28-163410_create_users_roles/: up.sql
src/: auth.rs  commands.rs  db_connection.rs  lib.rs  mail.rs  main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
tests/: authorization_test.rs  crates_test.rs  rustaceans_test.rs
tests/common/: mod.rs
